@@ -1,5 +1,6 @@
 package xyz.erupt.core.util;
 
+import lombok.Getter;
 import lombok.SneakyThrows;
 import org.springframework.beans.BeansException;
 import org.springframework.beans.factory.config.BeanDefinition;
@@ -7,6 +8,7 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.context.ApplicationContextAware;
 import org.springframework.context.annotation.ClassPathScanningCandidateComponentProvider;
 import org.springframework.core.type.filter.TypeFilter;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Controller;
 import org.springframework.stereotype.Repository;
@@ -22,21 +24,16 @@ import java.util.function.Consumer;
 @Component
 public class EruptSpringUtil implements ApplicationContextAware {
 
+    @Getter
     private static ApplicationContext applicationContext;
 
     @Override
-    public void setApplicationContext(ApplicationContext applicationContext) throws BeansException {
+    public void setApplicationContext(@NonNull ApplicationContext applicationContext) throws BeansException {
         if (EruptSpringUtil.applicationContext == null) {
             EruptSpringUtil.applicationContext = applicationContext;
         }
     }
 
-    //获取applicationContext
-    public static ApplicationContext getApplicationContext() {
-        return applicationContext;
-    }
-
-    //通过class获取Bean.
     @SneakyThrows
     public static <T> T getBean(Class<T> clazz) {
         if (null != clazz.getDeclaredAnnotation(Component.class)
@@ -46,7 +43,7 @@ public class EruptSpringUtil implements ApplicationContextAware {
                 || null != clazz.getDeclaredAnnotation(Controller.class)) {
             return getApplicationContext().getBean(clazz);
         } else {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         }
     }
 
@@ -66,10 +63,10 @@ public class EruptSpringUtil implements ApplicationContextAware {
     }
 
     /**
-     * 按照相对应的规则查找所有匹配类
+     * Scan all matching classes according to the corresponding rules
      *
-     * @param packages    包名
-     * @param typeFilters 匹配规则
+     * @param packages    package names
+     * @param typeFilters matching rule
      * @param consumer    consumer lambda
      */
     @SneakyThrows
